--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+
+
+
+
   <title>Hello World!</title>
 </head>
 
 
 <body>
+
+
   <h1 id="main_header">Hello World!</h1>
   We are using Node.js <span id="node-version"></span>,
   Chromium <span id="chrome-version"></span>,
   and Electron <span id="electron-version"></span>.
+  <p>
+    This is the current goal state:
+  </p>
+  <span id="goal_state"></span>
 </body>
 
 </html>
