--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
 
 
 <body>
-
-
-  <h1 id="main_header">Hello World!</h1>
-  We are using Node.js <span id="node-version"></span>,
-  Chromium <span id="chrome-version"></span>,
-  and Electron <span id="electron-version"></span>.
-  <p>
-    This is the current goal state:
-  </p>
+  <h1 id="main_header">Robot Status</h1>
   <span id="goal_state"></span>
   <div id="circle">
 </body>
