--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-
-
-
-
-  <title>Hello World!</title>
+  <title>Robot Status Gui</title>
 </head>
 
 
 <body>
   <h1 id="main_header">Robot Status</h1>
-  <span id="goal_state"></span>
   <div id="circle">
 </body>
 
