added in gif tests :)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
   <h1 id="main_header">Robot Status</h1>
-  <div id="circle">
+
+  <img id="Ricardo_dance" src="Ricardo_dance.gif" />
+  <img id="Rick_dance" src="Rick_dance.gif" />
 </body>
 
 </html>
